--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -100,8 +100,11 @@
     <Compile Include="Communications\IEmailDispatcher.cs" />
     <Compile Include="Communications\ISmsDispatcher.cs" />
     <Compile Include="Communications\SmsRequest.cs" />
+    <Compile Include="Organisations\IOrganisationService.cs" />
+    <Compile Include="Providers\IProviderService.cs" />
     <Compile Include="ReferenceData\IReferenceDataService.cs" />
     <Compile Include="Search\AggregationResult.cs" />
+    <Compile Include="Users\IUserProfileService.cs" />
     <Compile Include="Vacancies\ApprenticeshipSearchField.cs" />
     <Compile Include="Vacancies\VacancySearchParametersBase.cs" />
     <Compile Include="Vacancies\ApprenticeshipSearchParameters.cs" />
