--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -31,8 +31,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="Off">
-    </customErrors>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
