Employer Data Service: initial commit.

--- a/src/SFA.Apprenticeships.Application.Organisation/SFA.Apprenticeships.Application.Organisation.csproj
+++ b/src/SFA.Apprenticeships.Application.Organisation/SFA.Apprenticeships.Application.Organisation.csproj
@@ -82,8 +82,14 @@
     </Compile>
     <Compile Include="IProviderDataProvider.cs" />
     <Compile Include="IVerifiedOrganisationProvider.cs" />
-    <Compile Include="OrganisationService.cs" />
+    <Compile Include="IOrganisationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
+      <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
+      <Name>SFA.Apprenticeships.Domain.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
