--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -258,6 +258,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\StructuremapMvc.cs" />
     <Compile Include="Constants\RecruitmentRouteNames.cs" />
+    <Compile Include="Controllers\ProviderUserController.cs" />
     <Compile Include="Controllers\RecuitmentControllerBase.cs" />
     <Compile Include="Controllers\ProviderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -350,6 +351,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Mediators\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -377,6 +379,12 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>_LoginPartial.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\ProviderUser\Home.cshtml" />
+    <Content Include="Views\Provider\AddSite.cshtml" />
+    <Content Include="Views\Provider\EditSite.cshtml" />
+    <Content Include="Views\ProviderUser\UserInfo.cshtml" />
+    <Content Include="Views\ProviderUser\VertifyEmail.cshtml" />
+    <Content Include="Views\Home\LoginDummy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
