Employer Data Service: commit following nearly successful build.

--- a/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/app.config
+++ b/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <bindings>
@@ -13,12 +13,16 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://services.edrs.lsc.gov.uk/lookup17.asmx"
-        binding="basicHttpBinding" bindingConfiguration="EmployerLookupSoap"
-        contract="EmployerDataService.EmployerLookupSoap" name="EmployerLookupSoap" />
-      <endpoint address="http://services.edrs.lsc.gov.uk/lookup17.asmx"
-        binding="customBinding" bindingConfiguration="EmployerLookupSoap12"
-        contract="EmployerDataService.EmployerLookupSoap" name="EmployerLookupSoap12" />
+      <endpoint address="http://services.edrs.lsc.gov.uk/lookup17.asmx" binding="basicHttpBinding" bindingConfiguration="EmployerLookupSoap" contract="EmployerDataService.EmployerLookupSoap" name="EmployerLookupSoap" />
+      <endpoint address="http://services.edrs.lsc.gov.uk/lookup17.asmx" binding="customBinding" bindingConfiguration="EmployerLookupSoap12" contract="EmployerDataService.EmployerLookupSoap" name="EmployerLookupSoap12" />
     </client>
   </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
