--- a/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Net4, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -43,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorCodes.cs" />
+    <Compile Include="IoC\EmployerDataServicesRegistry.cs" />
     <Compile Include="Mappers\BsAddressMapper.cs" />
     <Compile Include="Mappers\EmployerMapper.cs" />
     <Compile Include="Providers\EmployerDataProvider.cs" />
@@ -81,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Service References\EmployerDataService\BS7666.xsd">
       <SubType>Designer</SubType>
     </None>
