--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -49,4 +49,5 @@
   <repository path="..\SFA.Apprenticeships.Web.Candidate\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Common.UnitTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Common\packages.config" />
+  <repository path="..\SFA.Apprenticeships.Web.Recruit\packages.config" />
 </repositories>
