--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -173,7 +173,7 @@
       <add assembly="NLog.Contrib"/>
     </extensions>
     <variable name="environment" value="Local"/>
-    <!--<targets async="true">
+    <targets async="true">
       <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
         <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Web.Recruit.{0}" AppId="SFA.Apprenticeships.Web.Recruit">
           <layout xsi:type="JsonLayout">
@@ -233,6 +233,6 @@
     </targets>
     <rules>
       <logger name="*" minlevel="Info" writeTo="fallbacklogger,AzureEventHub" />
-    </rules>-->
+    </rules>
   </nlog>
 </configuration>
