New projects set to restore nuget packages

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\SFA.Apprenticeships.Application.Communication\packages.config" />
   <repository path="..\SFA.Apprenticeships.Application.Communications\packages.config" />
   <repository path="..\SFA.Apprenticeships.Application.Location\packages.config" />
+  <repository path="..\SFA.Apprenticeships.Application.Organisation\packages.config" />
   <repository path="..\SFA.Apprenticeships.Application.ReferenceData\packages.config" />
   <repository path="..\SFA.Apprenticeships.Application.UnitTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Application.UserAccount\packages.config" />
@@ -19,6 +20,7 @@
   <repository path="..\SFA.Apprenticeships.Infrastructure.Common\packages.config" />
   <repository path="..\SFA.Apprenticeships.Infrastructure.Communication\packages.config" />
   <repository path="..\SFA.Apprenticeships.Infrastructure.Elastic.Common\packages.config" />
+  <repository path="..\SFA.Apprenticeships.Infrastructure.EmployerDataService\packages.config" />
   <repository path="..\SFA.Apprenticeships.Infrastructure.FrameworkDataProvider\packages.config" />
   <repository path="..\SFA.Apprenticeships.Infrastructure.IntegrationTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Infrastructure.LegacyWebServices\packages.config" />
@@ -49,5 +51,6 @@
   <repository path="..\SFA.Apprenticeships.Web.Candidate\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Common.UnitTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Common\packages.config" />
+  <repository path="..\SFA.Apprenticeships.Web.Recruit.UnitTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Recruit\packages.config" />
 </repositories>
