--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -174,6 +174,10 @@
     <Compile Include="IoC\ControllerConvention.cs" />
     <Compile Include="IoC\FilterConfig.cs" />
     <Compile Include="IoC\StructureMapDependencyScope.cs" />
+    <Compile Include="Mediators\InvalidMediatorCodeException.cs" />
+    <Compile Include="Mediators\MediatorBase.cs" />
+    <Compile Include="Mediators\MediatorResponse.cs" />
+    <Compile Include="Mediators\MediatorResponseMessage.cs" />
     <Compile Include="Models\Common\LastViewedVacancy.cs" />
     <Compile Include="Providers\RobotCrawlerProvider.cs" />
     <Compile Include="Providers\IRobotCrawlerProvider.cs" />
