--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -215,6 +215,7 @@
           </layout>
         </target>
       </target>
+      <!--
       <target name="AzureEventHub" xsi:type="AzureEventHubTarget" EventHubPath="log" EventHubConnectionStringSettingName="ConfigurationEventHubLogConnectionString">
         <layout xsi:type="JsonLayout">
           <property name="user" layout="${mdlc:userId}" />
@@ -242,9 +243,10 @@
           <property name="headers" layout="${mdlc:Headers}" />
         </layout>
       </target>
+      -->
     </targets>
     <rules>
-      <logger name="*" minlevel="Info" writeTo="fallbacklogger,AzureEventHub" />
+      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
     </rules>
   </nlog>
 </configuration>
