--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.34.0" targetFramework="net452" />
+  <package id="FluentAssertions" version="3.5.0" targetFramework="net452" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" />
+  <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.2.1507.0118" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
 </packages>
