--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -271,10 +271,10 @@
     <Compile Include="Constants\Messages\AuthorizeMessages.cs" />
     <Compile Include="Constants\RecruitmentRouteNames.cs" />
     <Compile Include="Constants\Roles.cs" />
+    <Compile Include="Mediators\Provider\IProviderMediator.cs" />
     <Compile Include="Mediators\Home\HomeMediator.cs" />
     <Compile Include="Mediators\Home\HomeMediatorCodes.cs" />
     <Compile Include="Mediators\Home\IHomeMediator.cs" />
-    <Compile Include="Mediators\Provider\IProviderSiteMediator.cs" />
     <Compile Include="Controllers\ProviderUserController.cs" />
     <Compile Include="Controllers\RecuitmentControllerBase.cs" />
     <Compile Include="Controllers\ProviderController.cs" />
@@ -285,15 +285,24 @@
     <Compile Include="IoC\IoC.cs" />
     <Compile Include="IoC\RecruitmentWebRegistry.cs" />
     <Compile Include="IoC\StructureMapScopeModule.cs" />
-    <Compile Include="Mediators\Provider\ProviderSiteMediator.cs" />
+    <Compile Include="Mediators\Provider\ProviderMediator.cs" />
     <Compile Include="Providers\IProviderProvider.cs" />
+    <Compile Include="Mediators\Provider\ProviderMediatorCodes.cs" />
+    <Compile Include="Validators\Provider\ProviderSiteSearchViewModelValidator.cs" />
+    <Compile Include="ViewModels\Provider\ProviderSiteSearchMode.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchResponseViewModel.cs" />
+    <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModelMessages.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\RecuitmentUserContext.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderViewModel.cs" />
+    <Compile Include="Views\Shared\ValidationSummary.generated.cs">
+      <DependentUpon>ValidationSummary.cshtml</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\_assets\css\font-awesome\css\font-awesome.min.css" />
@@ -406,6 +415,10 @@
     <Content Include="Views\ProviderUser\UserInfo.cshtml" />
     <Content Include="Views\ProviderUser\VertifyEmail.cshtml" />
     <Content Include="Views\Home\LoginDummy.cshtml" />
+    <Content Include="Views\Shared\ValidationSummary.cshtml">
+      <Generator>RazorGenerator</Generator>
+      <LastGenOutput>ValidationSummary.generated.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
