--- a/src/SFA.Apprenticeships.Web.Candidate.UnitTests/SFA.Apprenticeships.Web.Candidate.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate.UnitTests/SFA.Apprenticeships.Web.Candidate.UnitTests.csproj
@@ -262,7 +262,6 @@
     <Compile Include="Mediators\Login\SessionTimeoutTests.cs" />
     <Compile Include="Mediators\Login\SignOutTests.cs" />
     <Compile Include="Mediators\Login\UnlockTests.cs" />
-    <Compile Include="Mediators\MediatorResponseExtensions.cs" />
     <Compile Include="Mediators\Register\ActivateTests.cs" />
     <Compile Include="Mediators\Login\ForgottenPasswordTests.cs" />
     <Compile Include="Mediators\Register\RegisterBaseTests.cs" />
@@ -409,6 +408,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Web.Candidate\SFA.Apprenticeships.Web.Candidate.csproj">
       <Project>{470ba0c8-fe2e-4db9-92c8-6f37095688ee}</Project>
       <Name>SFA.Apprenticeships.Web.Candidate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Web.Common.UnitTests\SFA.Apprenticeships.Web.Common.UnitTests.csproj">
+      <Project>{3ca36139-bbdd-4305-b15a-e9500606b672}</Project>
+      <Name>SFA.Apprenticeships.Web.Common.UnitTests</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Web.Common\SFA.Apprenticeships.Web.Common.csproj">
       <Project>{adb1c795-a6aa-4cb8-82ae-2b8d10e22220}</Project>
