--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" />
+  <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
@@ -32,7 +34,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.0.1" targetFramework="net452" />
-  <package id="NLog.Contrib" version="1.0.0.2" targetFramework="net452" />  
+  <package id="NLog.Contrib" version="1.0.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
