--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -286,11 +286,14 @@
     <Compile Include="IoC\RecruitmentWebRegistry.cs" />
     <Compile Include="IoC\StructureMapScopeModule.cs" />
     <Compile Include="Mediators\Provider\ProviderSiteMediator.cs" />
+    <Compile Include="Providers\IProviderProvider.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchResponseViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\RecuitmentUserContext.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\Provider\ProviderSiteViewModel.cs" />
+    <Compile Include="ViewModels\Provider\ProviderViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\_assets\css\font-awesome\css\font-awesome.min.css" />
