--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -23,6 +23,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ConfigurationPath" value="Configs\settings.config" />
     <add key="Environment" value="Debug" />
+    <add key="ida:MetadataAddress" value="https://naspreacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" />
+    <add key="ida:Wtrealm" value="https://recruit.findapprenticeship.service.gov.uk/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
