--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.Data.Edm" version="5.6.2" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
@@ -29,6 +30,7 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.WsFederation" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
@@ -39,6 +41,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
