JS bundling: fix JavaScript library paths, added jQuery validation, webtrends etc.

--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -372,21 +372,25 @@
     <Content Include="Content\_assets\js\jobtitles.js" />
     <Content Include="Content\_assets\js\prototype-recruit.js" />
     <Content Include="Content\_assets\js\prototype.js" />
-    <Content Include="Content\_assets\js\scripts.min.js" />
+    <Content Include="Content\_assets\js\scripts.js" />
     <Content Include="Content\_assets\js\vendor\chosen.jquery.js" />
     <Content Include="Content\_assets\js\vendor\fastclick.js" />
     <Content Include="Content\_assets\js\vendor\goog\webfont-debug.js" />
-    <Content Include="Content\_assets\js\vendor\jquery-1.11.1.min.js" />
+    <Content Include="Content\_assets\js\vendor\jquery-1.11.1.js" />
     <Content Include="Content\_assets\js\vendor\jquery-ui-1.10.4.custom.min.js" />
     <Content Include="Content\_assets\js\vendor\jquery.cookie.js" />
     <Content Include="Content\_assets\js\vendor\jquery.joyride-2.1.js" />
     <Content Include="Content\_assets\js\vendor\jquery.lazy-load-google-maps.js" />
     <Content Include="Content\_assets\js\vendor\jquery.scrollTableBody-1.0.0.js" />
+    <Content Include="Content\_assets\js\vendor\jquery.validate.js" />
+    <Content Include="Content\_assets\js\vendor\jquery.validate.unobtrusive.custom.js" />
+    <Content Include="Content\_assets\js\vendor\jquery.validate.unobtrusive.js" />
     <Content Include="Content\_assets\js\vendor\jstorage.js" />
     <Content Include="Content\_assets\js\vendor\modernizr-2.7.1.js" />
     <Content Include="Content\_assets\js\vendor\modernizr-custom.js" />
     <Content Include="Content\_assets\js\vendor\zxcvbn-async.js" />
     <Content Include="Content\_assets\js\vendor\zxcvbn.js" />
+    <Content Include="Content\_assets\js\webtrends\webtrends.stub.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
