User profile interim checkin

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Web.config
@@ -18,6 +18,9 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="SFA.Apprenticeships.Web.Recruit" />
+        <add namespace="SFA.Apprenticeships.Web.Common.Constants" />
+        <add namespace="SFA.Apprenticeships.Web.Common.Framework" />
+        <add namespace="SFA.Apprenticeships.Web.Common.Models.Common" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
