--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Mediators\Provider\ProviderMediatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
+    <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
